RESOLVED FIXED199491
Crash in WebDragClient::startDrag because GraphicsContext is nullptr
https://bugs.webkit.org/show_bug.cgi?id=199491
Summary Crash in WebDragClient::startDrag because GraphicsContext is nullptr
Ryosuke Niwa
Reported 2019-07-03 20:34:33 PDT
Crash in WebDragClient::startDrag because GraphicsContext is nullptr
Attachments
Adds a null check (1.37 KB, patch)
2019-07-03 20:35 PDT, Ryosuke Niwa
wenson_hsieh: review+
Ryosuke Niwa
Comment 1 2019-07-03 20:35:21 PDT
Created attachment 373452 [details] Adds a null check
Ryosuke Niwa
Comment 2 2019-07-03 20:35:44 PDT
Ryosuke Niwa
Comment 3 2019-07-03 20:39:50 PDT
Note You need to log in before you can comment on or make changes to this bug.