Crash in WebDragClient::startDrag because GraphicsContext is nullptr https://bugs.webkit.org/show_bug.cgi?id=199491

Reviewed by Wenson Hsieh.

Added a nullptr check.

Unfortunately no new tests since we don't have a reproducible test case.

* WebProcess/WebCoreSupport/mac/WebDragClientMac.mm:
(WebKit::convertImageToBitmap):


Canonical link: https://commits.webkit.org/213400@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@247134 268f45cc-cd09-0410-ab3c-d52691b4dbfc