Source/WebKit/WebProcess/WebCoreSupport/mac/WebDragClientMac.mm
@@ -69,6 +69,8 @@ static RefPtr<ShareableBitmap> convertImageToBitmap(NSImage *image, const IntSiz
         return nullptr;
 
     auto graphicsContext = bitmap->createGraphicsContext();
+    if (!graphicsContext)
+        return nullptr;
 
     RetainPtr<NSGraphicsContext> savedContext = [NSGraphicsContext currentContext];
 
